@@ -1,0 +1,20 @@
+package org.jsoup.internal;
+
+import javax.annotation.Nonnull;
+import javax.annotation.meta.TypeQualifierDefault;
+import java.lang.annotation.Documented;
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+
+@Documented
+@Nonnull
+@TypeQualifierDefault(ElementType.METHOD)
+@Retention(value = RetentionPolicy.RUNTIME)
+
+/**
+ Indicates return types are not nullable, unless otherwise specified by @Nullable.
+ @see javax.annotation.ParametersAreNonnullByDefault
+ */
+public @interface ReturnsAreNonnullByDefault {
+}
